# prisma-engines

./: Cargo.toml  dev.sh
schema-engine/connectors/no-connector/: Cargo.toml
schema-engine/connectors/schema-connector/: Cargo.toml
schema-engine/connectors/sql-schema-connector/: Cargo.toml
schema-engine/connectors/sql-schema-connector/examples/: diff.rs
schema-engine/connectors/sql-schema-connector/src/: apply_migration.rs  flavour.rs  lib.rs  sql_destructive_change_checker.rs  sql_migration_persistence.rs
schema-engine/connectors/sql-schema-connector/src/flavour/: mssql.rs  mysql.rs  postgres.rs  sqlite.rs
schema-engine/connectors/sql-schema-connector/src/flavour/mssql/: connection.rs  shadow_db.rs
schema-engine/connectors/sql-schema-connector/src/flavour/mysql/: connection.rs  shadow_db.rs
schema-engine/connectors/sql-schema-connector/src/flavour/postgres/: connection.rs  shadow_db.rs
schema-engine/connectors/sql-schema-connector/src/flavour/sqlite/: connection.rs
schema-engine/connectors/sql-schema-connector/src/sql_destructive_change_checker/: destructive_change_checker_flavour.rs  destructive_check_plan.rs
schema-engine/connectors/sql-schema-connector/src/sql_destructive_change_checker/destructive_change_checker_flavour/: mssql.rs  mysql.rs  postgres.rs  sqlite.rs
schema-engine/connectors/wasm/: .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
schema-engine/core/examples/: dev.rs
schema-engine/sql-schema-describer/: Cargo.toml
schema-engine/sql-schema-describer/src/: lib.rs
(+6 files in other folders)
